compiler/testData/diagnostics/tests/unsignedTypes/callDefaultConstructorOfUnsignedType.fir.kt
val foo = <!INVISIBLE_REFERENCE!>UInt<!>()
